# SimLib

./: .gitignore  Makefile  ci-pipeline-v1.0.0.yml  main.py  pyproject.toml
.github/workflows/: ci-pipeline.yml  python-package-conda.yml
examples/: asset_time_series.py
simlib/: custom_typing.py  global_variables.py  json_utils.py  main.py  simulation.py
simlib/agency/: agent.py  config.py  control.py  data.py  prediction.py  products.py  scenario_tree.py  tariffs.py  time.py  weather.py
simlib/assets/: asset.py  energy_storage.py
simlib/schemas/: config.py  control.py
tests/: conftest.py  test_agent.py  test_assets.py  test_modules.py  test_tariffs.py
